<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/back_rect_round"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_choose_images" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back_rectangle"
                android:padding="1px">

                <com.hzy.face.morphme.widget.Ratio34ImageView
                    android:id="@+id/imageview_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_head" />

                <ProgressBar
                    android:id="@+id/image_progress_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back_rectangle"
                android:padding="1px">

                <com.hzy.face.morphme.widget.Ratio34ImageView
                    android:id="@+id/imageview_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_head" />

                <ProgressBar
                    android:id="@+id/image_progress_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back_rectangle"
                android:padding="1px">

                <com.hzy.face.morphme.widget.Ratio34ImageView
                    android:id="@+id/imageview_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/image_progress_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="6dp">

                <Button
                    android:id="@+id/btn_start_morph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_to_morph" />

                <Button
                    android:id="@+id/btn_save_gif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/save_gif" />

                <TextView
                    android:id="@+id/alpha_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Alpha: 2.3" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>